--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="https://assets.maccarianagency.com/favicons/webbee/favicon.ico" />
+    <link
+      rel="shortcut icon"
+      href="https://assets.maccarianagency.com/favicons/webbee/favicon.ico"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -10,7 +13,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="A modern design system for your new landing and web pages."
+      content="We are a non-biased, decentralized platform for crowdfunding efforts."
     />
     <meta
       name="robots"
@@ -24,17 +27,20 @@
     />
     <meta
       property="og:title"
-      content="Webbee | UI Kit by Maccarian Agency."
+      content="Donation-Dao, censorship-free crowdfunding"
     />
     <meta
       property="og:description"
-      content="A modern design system for your new landing and web pages."
+      content="We are a non-biased, decentralized platform for crowdfunding efforts."
     />
-    <meta property="og:url" content="https://webbee.maccarianagency.com/" />
+    <meta property="og:url" content="https://donation-dao.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>
-      Webbee | UI Kit by Maccarian Agency.
+      Donation-Dao, censorship-free crowdfunding
     </title>
   </head>
   <body>
