--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="shortcut icon"
-      href="https://assets.maccarianagency.com/favicons/webbee/favicon.ico"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -21,10 +18,7 @@
     />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://webbee.maccarianagency.com/assets/social.png"
-    />
+    <meta property="og:image" content="%PUBLIC_URL%/social.png" />
     <meta
       property="og:title"
       content="Donation-Dao, censorship-free crowdfunding"
